# GLRenderer

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
shaders/: default.frag  default.vert
src/: helper.hpp  main.cpp
src/base/: Component.cpp  Component.hpp  Node.cpp  Node.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
src/components/: AABB.cpp  AABB.hpp  Camera.cpp  Camera.hpp  Image.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.hpp  SubMesh.hpp  Texture.hpp  Transform.cpp  Transform.hpp
src/graphics/: GLBuffer.cpp  GLBuffer.hpp  GLMesh.cpp  GLMesh.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp
src/resource/: AssetManager.cpp  AssetManager.hpp  GraphicsManager.cpp  GraphicsManager.hpp
